# jiratui

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  jiratui.example.yaml  pyproject.toml  ruff.toml
.github/workflows/: lint.yaml  publish-to-pypi.yml  publish-to-testpypi.yml  static.yml  test.yaml  website.yml
docs/: conf.py  index.md  jiratui  requirements.txt
docs/developers/: CONTRIBUTING.md  index.md
docs/developers/explanation/: architecture.md  cli-and-ui.md  components.md  index.md  jira-api.md  textual-framework.md  use-cases.md
docs/developers/getting-started/: code-style-guidelines.md  codebase.md  index.md  pull-request-guidelines.md  quick-start.md
docs/developers/guides/: documentation.md  index.md  testing.md
docs/developers/reference/: api-client.md  api-dc.md  api-v2.md  api-v3.md  config.md  controller.md  factories.md  index.md  models.md  session.md
docs/developers/reference/widgets/: common-adf.md  common-base.md  common-users.md  common-widgets.md  filters.md  related-work-items.md  screens.md  search.md  text-search.md  work-item-attachments.md  work-item-comments.md  work-item-creation.md  work-item-details.md  work-item-web-links.md
docs/extensions/: docstrings_parser.py
docs/users/configuration/: configuration.md  index.md  reference.md
docs/users/install/: index.md
docs/users/usage/: index.md
jtsite/: getting-started.html  index.html  sitemap.xml  usage.html
jtsite/assets/css/: theme.css.map  theme.min.css.map
jtsite/assets/js/: theme.js.map  theme.min.js.map
jtsite/vendors/swiper/: swiper-bundle.min.css  swiper-bundle.min.js
src/: app.py  cli.py  config.py  constants.py  models.py
src/api/: api.py  client.py  utils.py
src/api/tests/: test_api.py
src/api/tests/responses/: project_statuses.json
src/api_controller/: controller.py  factories.py
src/api_controller/tests/: test_controller.py
src/commands/: handler.py  render.py
src/css/: jt.tcss
src/jiratui/: app.py  cli.py  config.py  conftest.py  constants.py  exceptions.py  files.py  models.py
src/jiratui/api/: api.py  client.py  utils.py
src/jiratui/api/tests/: test_api.py  test_client.py  test_utils.py
src/jiratui/api/tests/responses/: assignable_users_search.json  evaluate_expression.json  issue.json  issue_create_meta_required_fields.json  issue_remote_links.json  project.json  statuses.json
src/jiratui/api_controller/: constants.py  controller.py  factories.py
src/jiratui/api_controller/tests/: test_controller.py  test_factories.py
src/jiratui/api_controller/tests/responses/: issue.json  issue_no_adf.json
src/jiratui/commands/: handler.py  render.py
src/jiratui/commands/tests/: test_handlers.py
src/jiratui/css/: jt.tcss
src/jiratui/tests/: test_app.py  test_attachments.py  test_confirmation_screen.py  test_fulltext_search.py  test_git.py  test_jql_screen.py  test_main_screen.py  test_models_atlas_parser.py  test_search_results.py  test_widgets.py
src/jiratui/utils/: adf.py  adf_helpers.py  create_work_item.py  fields.py  history.py  in_app_help.md  mime.py  session.py  styling.py  test_utilities.py  tests.py  urls.py  work_item_updates.py
src/jiratui/utils/adf2md/: adf2md.py  markdown.py  nodes.py
src/jiratui/utils/adf2md/tests/: test_adf_to_markdown.py
src/jiratui/utils/tests/: test_adf_helpers.py  test_adf_to_md_conversion.py  test_fields.py  test_history.py  test_styling.py  test_urls.py  test_work_item_updates.py
src/jiratui/widgets/: base.py  config_info.py  confirmation_screen.py  constants.py  filters.py  git_screen.py  help.py  jql.py  messages.py  quit.py  screen.py  screens.py  search.py  server_info.py  subtasks.py  summary.py  text.py  text_search.py
src/jiratui/widgets/attachments/: add.py  attachments.py
src/jiratui/widgets/attachments/tests/: test_attachments.py
src/jiratui/widgets/comments/: add.py  comments.py
src/jiratui/widgets/comments/tests/: test_comments.py
src/jiratui/widgets/common/: __init__.py  adf_textarea.py  base_fields.py  constants.py  factory_utils.py  widgets.py
src/jiratui/widgets/common/tests/: test_widgets.py
src/jiratui/widgets/commons/: __init__.py  adf.py  base.py  constants.py  factory_utils.py  users.py  widgets.py
src/jiratui/widgets/commons/tests/: test_base.py  test_factory.py  test_users.py  test_widgets.py
src/jiratui/widgets/create_work_item/: factory.py  fields.py  screen.py  test_screen.py
src/jiratui/widgets/create_work_item/tests/: test_create_work_item.py
src/jiratui/widgets/related_work_items/: add.py  related_issues.py
src/jiratui/widgets/related_work_items/tests/: test_related_issues_widget.py
src/jiratui/widgets/remote_links/: add.py  links.py
src/jiratui/widgets/remote_links/tests/: test_links.py
src/jiratui/widgets/screens/: confirmation.py  git.py  goto.py  help.py  history.py  jql.py  server.py  text_search.py  work_item_quick_view.py
src/jiratui/widgets/screens/tests/: test_goto.py  test_history.py  test_work_item_quick_view.py
src/jiratui/widgets/work_item_details/: details.py  factory.py  fields.py  flag_work_item.py  read_only_details.py  work_log.py
src/jiratui/widgets/work_item_info/: edit_description.py  info.py  screens.py  tabs.py  widgets.py
src/jiratui/widgets/work_item_info/tests/: test_info.py
src/jiratui/widgets/work_item_subtasks/: subtasks.py
src/jiratui/widgets/work_item_worklog/: screens.py  widgets.py
src/tests/: test_app.py  test_main_screen.py
src/utils/: create_work_item.py  urls.py  work_item_updates.py
src/utils/adf2md/: adf2md.py  markdown.py
src/widgets/: base.py  filters.py  help.py  jql.py  screens.py  search.py  server_info.py  subtasks.py
src/widgets/attachments/: add.py  attachments.py
src/widgets/comments/: add.py  comments.py
src/widgets/create_work_item/: fields.py  screen.py
src/widgets/related_work_items/: add.py  related_issues.py
src/widgets/remote_links/: add.py  links.py
src/widgets/work_item_details/: details.py  read_only_details.py  work_log.py
(+9 files in other folders)
