[project]
name = "jiratui"
version = "0.1.0"
description = "A TUI for interacting with Atlassian's Jira from your terminal."
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
maintainers = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
keywords = ["tui", "jira", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pydantic-settings[yaml]>=2.10.1",
    "python-json-logger>=3.3.0",
    "textual[syntax]>=5.3.0",
    "tonalite>=1.8.4",
]

[project.urls]
Homepage = "https://github.com/whyisdifficult/jiratui"
Documentation = "https://github.com/whyisdifficult/jiratui/README.md"
Repository = "https://github.com/whyisdifficult/jiratui"
Issues = "https://github.com/whyisdifficult/jiratui/issues"
Changelog = "https://github.com/whyisdifficult/jiratui/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-markdown-builder>=0.6.8",
    "sphinx-rtd-theme>=3.0.2",
]
lint = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "respx>=0.22.0",
]

[project.scripts]
jiratui = "jiratui.cli:jiratuicli"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = 3.13
strict_optional = false
ignore_missing_imports = true
show_error_context = false
exclude = ["docs", "test"]
