[project]
name = "jiratui"
version = "1.6.2"
description = "A TUI for interacting with Atlassian Jira from your terminal."
readme = "README.md"
requires-python = ">=3.10,<3.15"

authors = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
maintainers = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
keywords = ["tui", "jira", "cli", "terminal", "shell", "task-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click==8.3.0",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "pydantic-settings[yaml]>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "python-magic>=0.4.27",
    "textual-autocomplete>=4.0.6",
    "textual-image>=0.8.4",
    "textual[syntax]>=6.4.0",
    "xdg-base-dirs>=6.0.2",
]

[project.urls]
Homepage = "https://jiratui.sh"
Documentation = "https://jiratui.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/whyisdifficult/jiratui"
Issues = "https://github.com/whyisdifficult/jiratui/issues"
Changelog = "https://github.com/whyisdifficult/jiratui/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "textual-dev>=1.8.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinx-markdown-builder>=0.6.8",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]
lint = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]
test = [
    "pytest>8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>6.2.1",
    "respx>=0.22.0",
]

[project.scripts]
jiratui = "jiratui.cli:jiratuicli"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = 3.14
strict_optional = false
ignore_missing_imports = true
show_error_context = false
exclude = ["docs", "test"]
