[project]
name = "jiratui"
version = "1.7.0"
description = "A TUI for interacting with Atlassian Jira from your terminal."
readme = "README.md"
requires-python = ">=3.12,<3.15"

authors = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
maintainers = [
  {name = "Gaston T.", email = "pythondeveloper@outlook.com"}
]
keywords = ["tui", "jira", "cli", "terminal", "shell", "task-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1,<9.0.0",
    "gitpython>=3.1.46,<3.2.0",
    "httpx>=0.28.1",
    "pydantic-settings[yaml]>=2.13.1,<3.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin; sys_platform == 'win32'",
    "textual-autocomplete>=4.0.6",
    "textual-image>=0.8.5,<0.9.0",
    "textual[syntax]>=8.2.0,<9.0.0",
    "xdg-base-dirs>=6.0.2",
]

[project.urls]
Homepage = "https://jiratui.sh"
Documentation = "https://jiratui.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/whyisdifficult/jiratui"
Issues = "https://github.com/whyisdifficult/jiratui/issues"
Changelog = "https://github.com/whyisdifficult/jiratui/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<4.6.0",
    "textual-dev>=1.8.0",
]
docs = [
    "myst-parser>=5.0.0,<6.0.0",
    "sphinx>=9.1.0,<10.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-markdown-builder>=0.6.10,<0.7.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=2.0.1,<2.1.0",
]
lint = [
    "mypy>=1.19.1,<1.20.0",
    "ruff>=0.15.8,<0.16.0",
]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "respx>=0.22.0",
]

[project.scripts]
jiratui = "jiratui.cli:jiratuicli"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = 3.14
strict_optional = false
ignore_missing_imports = true
show_error_context = false
exclude = ["docs", "test"]
